<resources>
    <string name="app_name">SoWiSo Scanner</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign in</string>
    <string name="next">Next</string>
    <string name="back_button">back button</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
</resources>
