<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:fitsSystemWindows="true"
    tools:context=".Create_Account">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="0dp"
        android:alpha="1"
        android:background="@drawable/rounded_container"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="visible"
        app:contentInsetStart="16dp" />

    <ImageView
        android:id="@+id/logo"
        style="@style/logoFinalPosition"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2x" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="42dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:scaleType="centerInside"
        android:src="@drawable/backarrow" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/default_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/container1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/create_account"
        android:textColor="#202426"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/texteditbg"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPostalAddress"
        android:textColor="#202426"
        android:textColorHighlight="#DDDDDD"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:background="@drawable/texteditbg"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#202426"
        android:textColorHighlight="#DDDDDD"
        android:textCursorDrawable="@null" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-286dp"
        android:layout_marginEnd="481dp"
        android:layout_marginBottom="301dp"
        android:alpha="0"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/texteditbg"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColor="#202426"
        android:textColorHighlight="#DDDDDD"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/texteditbg"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPostalAddress"
        android:textColor="#202426"
        android:textColorHighlight="#DDDDDD"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="Need support?"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

</RelativeLayout>