<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:alpha="0"
        android:background="@drawable/rounded_container"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="gone"
        app:contentInsetStart="16dp" />

    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="99dp"
        android:alpha="0"
        android:background="@drawable/default_button"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:visibility="gone" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:alpha="0"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="#43425D"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="316dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2x" />

</RelativeLayout>